k8s/media-services/fladder/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fladder
  namespace: media-services
  labels:
    app: fladder
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: fladder
